--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -6,15 +6,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <link href="../static/css/adminPanel.css" th:href="@{/css/adminPanel.css}" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/js/adminPage.js"></script>
 
     <title>Admin panel</title>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-    <h4><a href="#">Project name</a></h4>
-    <a href="/logout">Logout</a>
+    <h4><a class="text-secondary" href="#">Project name</a></h4>
+    <a class="text-secondary" href="/logout">Logout</a>
 </nav>
 <div class="container-fluid">
     <div class="row">
@@ -22,10 +22,10 @@
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link list-group-item active" th:href="@{'/admin'}">Admin</a>
+                        <a class="nav-link list-group-item active" th:href="@{'/adminPage'}">Admin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link list-group-item" th:href="@{'/hello'}">User</a>
+                        <a class="nav-link list-group-item" th:href="@{'/userPage'}">User</a>
                     </li>
                 </ul>
             </div>
@@ -49,34 +49,20 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table table-striped table-sm">
+                                <table id="customerTable" class="table table-striped table-sm">
                                     <thead>
-                                    <tr>
-                                        <th scope="col">ID</th>
-                                        <th scope="col">Username</th>
-                                        <th scope="col">Password</th>
-                                        <th scope="col">Roles</th>
-                                        <th scope="col">Action</th>
-                                    </tr>
+                                        <tr>
+                                            <th scope="col">ID</th>
+                                            <th scope="col">Username</th>
+                                            <th scope="col">Password</th>
+                                            <th scope="col">Roles</th>
+                                            <th scope="col">Action</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="users : ${users}">
-                                        <th th:text="${users.id}"></th>
-                                        <td th:text="${users.username}"></td>
-                                        <td th:text="${users.password}"></td>
+                                    <tr>
                                         <td>
-                                            <div th:each="role : ${users.roles}">
-                                                <div th:text="${role.name}"></div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <!-- Button trigger modal -->
-                                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:attrappend="data-target=${users.id}">
-                                                Edit
-                                            </button>
-
-                                            <!-- Modal -->
-                                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" th:attrappend="id=${users.id}">
+                                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                                 <div class="modal-dialog" role="document">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
@@ -85,47 +71,41 @@
                                                                 <span aria-hidden="true">&times;</span>
                                                             </button>
                                                         </div>
-                                                        <div class="modal-body text-center">
-                                                            <form action="#" th:action="@{/admin/editUser}" method="post">
+                                                        <div id="updateCustomerId" class="modal-body text-center">
+                                                            <form id="customizedForm">
                                                                 <!-- Text input-->
                                                                 <div class="form-group">
                                                                     <label class="col-md-4 control-label" for="id">ID</label>
                                                                     <div class="col-md-4 mx-auto">
-                                                                        <input id="id" path="id" name="id"
-                                                                               type="text" placeholder="ID"
+                                                                        <input id="id" name="id" type="text" placeholder="ID"
                                                                                class="form-control input-md"
-                                                                               th:value="${users.id}" readonly="readonly"/>
+                                                                               readonly="readonly"/>
                                                                     </div>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="col-md-4 control-label" for="username">Username</label>
                                                                     <div class="col-md-4 mx-auto">
-                                                                        <input id="username" path="username" name="username"
-                                                                               type="text" placeholder="username"
-                                                                               class="form-control input-md"
-                                                                               th:value="${users.username}"/>
+                                                                        <input id="username" name="username" type="text" placeholder="username"
+                                                                               class="form-control input-md"/>
                                                                     </div>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="col-md-4 control-label" for="password">Password</label>
                                                                     <div class="col-md-4 mx-auto">
-                                                                        <input id="password" path="password" name="password"
-                                                                               type="text" placeholder="password"
-                                                                               class="form-control input-md"
-                                                                               th:value="${users.password}"/>
+                                                                        <input id="password" name="password" type="text" placeholder="password"
+                                                                               class="form-control input-md"/>
                                                                     </div>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="col-md-4 control-label" for="role">Roles</label>
                                                                     <div class="col-md-4 mx-auto">
-                                                                        <input type="checkbox" id="role1" name="role" value="ROLE_USER"/>ROLE_USER<br>
-                                                                        <input type="checkbox" id="role" name="role" value="ROLE_ADMIN"/>ROLE_ADMIN
+                                                                        <input type="checkbox" id="role1" name="roleUser" value="ROLE_USER"/>ROLE_USER<br>
+                                                                        <input type="checkbox" id="role" name="roleAdmin" value="ROLE_ADMIN"/>ROLE_ADMIN
                                                                     </div>
                                                                 </div>
 
                                                                 <!-- Button -->
                                                                 <div class="modal-footer">
-                                                                    <!--                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>-->
                                                                     <div class="form-group">
                                                                         <label class="control-label" for="close"></label>
                                                                         <div class="">
@@ -137,7 +117,7 @@
                                                                     <div class="form-group">
                                                                         <label class="control-label" for="edit"></label>
                                                                         <div class="">
-                                                                            <button id="edit" name="edit" class="btn btn-primary">
+                                                                            <button id="edit" type="submit" name="edit" class="patch btn btn-primary">
                                                                                 Edit user
                                                                             </button>
                                                                         </div>
@@ -148,13 +128,14 @@
                                                     </div>
                                                 </div>
                                             </div>
-
-                                            <!--                                    <a th:href="@{'/admin/editUser/?id=' + ${users.id}}">Edit</a>-->
-                                            <!--                                    <a th:href="@{'/admin/deleteUser?id=' + ${users.id}}">Delete</a>-->
                                         </td>
                                     </tr>
                                     </tbody>
                                 </table>
+
+                                <div id="resultMsgDiv">
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -166,23 +147,19 @@
                         </div>
                         <div class="card-body">
                             <div class="text-center">
-                                <form action="#" th:action="@{/admin/addUser}" th:object="${user}" method="post">
+                                <form id="customerForm">
                                     <div class="form-group">
                                         <label class="col-md-4 control-label" for="usernameAdd">Username</label>
                                         <div class="col-md-4 mx-auto">
-                                            <input id="usernameAdd" path="username" name="username"
-                                                   type="text" placeholder="username"
-                                                   class="form-control input-md"
-                                                   th:value="*{username}"/>
+                                            <input id="usernameAdd" type="text" placeholder="username"
+                                                   class="form-control input-md"/>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-md-4 control-label" for="passwordAdd">Password</label>
                                         <div class="col-md-4 mx-auto">
-                                            <input id="passwordAdd" path="password" name="password"
-                                                   type="text" placeholder="password"
-                                                   class="form-control input-md"
-                                                   th:value="*{password}"/>
+                                            <input id="passwordAdd" type="text" placeholder="password"
+                                                   class="form-control input-md"/>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -193,35 +170,10 @@
                                             </button>
                                         </div>
                                     </div>
-<!--                                    <table border="1" cellpadding="5">-->
-<!--                                        <caption><h2>Add User</h2></caption>-->
-<!--                                        <tr>-->
-<!--                                            <th>Username: </th>-->
-<!--                                            <td>-->
-<!--                                                <input type="text" th:field="*{username}" />-->
-<!--                                            </td>-->
-<!--                                        </tr>-->
-<!--                                        <tr>-->
-<!--                                            <th>Password: </th>-->
-<!--                                            <td>-->
-<!--                                                <input type="text" th:field="*{password}" />-->
-<!--                                            </td>-->
-<!--                                        </tr>-->
-<!--                                        <tr>-->
-<!--                                            <td colspan="2" align="center">-->
-<!--                                                <input type="submit" value="Save" />-->
-<!--                                            </td>-->
-<!--                                        </tr>-->
-<!--                                    </table>-->
                                 </form>
-
                             </div>
                         </div>
                     </div>
-
-
-
-
                 </div>
             </div>
         </main>
@@ -229,8 +181,8 @@
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
